model-job module refactoring
